kubernetes-networks/canary/0_web-canary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: web-canary
    spec:
      containers:
      - name: web-canary
        image: ivorlun/bitnami-nginx-8000:latest
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket:
            port: 8000
        volumeMounts:
          - name: app
            mountPath: /app
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
      volumes:
        - name: app
          emptyDir: {}
