kubernetes-networks/canary/1_web-canary-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-canary-svc
spec:
  selector:
    app: web-canary
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
